--- a/timesync.qmd
+++ b/timesync.qmd
@@ -5,10 +5,10 @@ Checking the accuracy of your LandTrendr outputs requires a separate set of fore
 
 ## Using TimeSync
 
-Once you are able to set up a timesync project, using the software is fairly straight forward. The [user manual](https://timesync.forestry.oregonstate.edu/tutorial.html) is the best available instructional document that we have found. The mentioned online tutorial with examples no longer appears to exist. Some disturbance types are difficult to distinguish based on spectral trajectory alone, and we found it to be helpful to have auxillery imagery to compare with the data presented in timesync. For this imagery we used the historical imagery in the Desktop version of Google Earth. This interface was easy to use, allows the user to import shapefiles (ie. your timesync plot locaions), and requires no local hosting of imagery. However, the temporal frequency of this imagery is not ideal, with gaps of 10+ years in some locations.
+Once you are able to set up a TimeSync project, using the software is fairly straight forward. The [user manual](https://timesync.forestry.oregonstate.edu/tutorial.html) is the best available instructional document that we have found. The mentioned online tutorial with examples no longer appears to exist. Some disturbance types are difficult to distinguish based on spectral trajectory alone, and we found it to be helpful to have auxiliary imagery to compare with the data presented in TimeSync. For this imagery we used the historical imagery in the Desktop version of Google Earth. This interface was easy to use, allows the user to import shapefiles (ie. your TimeSync plot locations), and requires no local hosting of imagery. However, the temporal frequency of this imagery is not ideal, with gaps of 10+ years in some locations.
 
-One final note, any comments made within the TimeSync platform do not export with your final data, so keep that in mind if you are leaving commments that are important for the interpretation of your final labeled trajectories.
+Some final notes: Any comments made within the TimeSync platform do not export with your final data, so keep that in mind if you are leaving comments that are important for the interpretation of your final labeled trajectories. Additionally, TimeSync does not have a mechanism for estimating the magnitude of your labeled change events, so if you are comparing to LandTrendr outputs, it must be a year of most recent disturbance output.
 
 ## Alternatives to TimeSync
 
-The only alternative to TimeSync that we have come across is [CollectEarth](https://www.collect.earth/) software. In our exploration this software was much more customizable, but lacked the tailored timeseries comparisons that makes TimeSync work so well with LandTrendr. CollectEarth does have many more imagery options, so could be used as a source of auxillery refernce imagery.
+The only alternative to TimeSync that we have come across is [CollectEarth](https://www.collect.earth/) software. In our exploration this software was much more customizable, but lacked the tailored timeseries comparisons that makes TimeSync work so well with LandTrendr. CollectEarth does have many more imagery options, so could be used as a source of auxiliary reference imagery.
